test/end-to-end/compile-errors/variant-multiple-members-with-name.crow
main void()
	a v = x
	info log match a
	as x
		"x"
	else
		"something else"
	()

v variant
x record v variant-member
x record v variant-member
